--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,10 @@
-buildscript {
-	ext {
-		queryDslVersion = "5.0.0"
-	}
-}
 plugins {
-	id 'groovy'
+	id 'java'
 	id 'org.springframework.boot' version '3.3.3'
 	id 'io.spring.dependency-management' version '1.1.6'
 }
 
-group = 'org.example'
+group = 'org.junstory'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -30,23 +25,21 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.apache.groovy:groovy'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-	//QueryDSL
-	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
-
-	annotationProcessor(
-			"jakarta.persistence:jakarta.persistence-api",
-			"jakarta.annotation:jakarta.annotation-api",
-			"com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
-	)
+	//jwt
+	implementation "io.jsonwebtoken:jjwt-api:0.12.5"
+	runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.5"
+	runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.12.5"
 }
 
 tasks.named('test') {
