--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,19 @@
-spring.application.name=ex2
+spring.application.name=ex3
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/bootdb2
 spring.datasource.username=bootdb2user
 spring.datasource.password=bootdb2user
 
+
 spring.datasource.hikari.minimum-idle=2
 spring.datasource.hikari.maximum-pool-size=5
 
-#DDL Generation (none/validate/update/create/create-drop)
-
 spring.jpa.hibernate.ddl-auto=update
-
-#SQL SHOW
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#MariaDB
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+logging.level.org.springframework.security.web=TRACE
+
