--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,16 @@
+buildscript {
+	ext {
+		queryDslVersion = "5.0.0"
+	}
+}
 plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.3.3'
 	id 'io.spring.dependency-management' version '1.1.6'
 }
-
 group = 'org.junstory'
 version = '0.0.1-SNAPSHOT'
+
 
 java {
 	toolchain {
@@ -40,6 +45,19 @@ dependencies {
 	implementation "io.jsonwebtoken:jjwt-api:0.12.5"
 	runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.5"
 	runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.12.5"
+
+	//Thumbnail
+	// https://mvnrepository.com/artifact/net.coobird/thumbnailator
+	implementation 'net.coobird:thumbnailator:0.4.20'
+
+	//Querydsl
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
+
+	annotationProcessor(
+			"jakarta.persistence:jakarta.persistence-api",
+			"jakarta.annotation:jakarta.annotation-api",
+			"com.querydsl:querydsl-apt:${queryDslVersion}:jakarta"
+	)
 }
 
 tasks.named('test') {
